wordcloud bug fixed, wordcloud now readable

--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ text-align: center;
 #tagcloud {
 text-align: center;
 width: 90%;
-max-width: 500px;
+max-width: 1000px;
 margin-left: auto;
 margin-right: auto;
 }
